--- a/_config.yml
+++ b/_config.yml
@@ -8,19 +8,17 @@ aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
 
 # Groups of pages in the left nav
-#collections:
-#  dashboards:
-#    permalink: /:collection/:path/
-#    output: true
+collections:
+  dashboards:
+    permalink: /:collection/:path/
+    output: true
 
-#just_the_docs:
-#  collections:
-#    dashboards:
-#      name: Dashboards
+just_the_docs:
+  collections:
+    dashboards:
+      name: Dashboards
 
 # Enable relative links for collections -- https://github.com/benbalter/jekyll-relative-links
 relative_links:
   enabled: true
-#  collections: true
-
-nav_expand: true
+  collections: true
